ipad overflow fix

--- a/src/styles/defaults.less
+++ b/src/styles/defaults.less
@@ -3,7 +3,8 @@
 html {
   // scroll-behavior: smooth;
   max-width: 100vw;
-  overflow-x: hidden;
+  width: 100vw;
+  overflow-x: hidden !important;
 }
 
 body {
@@ -11,9 +12,18 @@ body {
 
   font-family: "Graphik Light", sans-serif;
   margin: 0px;
+  width: 100vw;
+  max-width: 100vw;
   // max-width: 100vw;
   // overflow-x: hidden;
 }
+
+// #main {
+//   top: 0;
+//   width: 100vw;
+//   max-width: 100vw;
+//   position: absolute; /*this is required for clip-paths to work*/
+// }
 
 h1 {
   font-family: "Graphik Light", sans-serif;
